--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "tailwindcss": "^3.1.7"
   },
   "scripts": {
-    "build-css": "npx tailwindcss -i ./src/styles.css -o ./public/css/tailwind.css"
+    "build-css": "npx tailwindcss -i ./src/styles.css -o ./public/css/tailwind.css",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
