--- a/package.json
+++ b/package.json
@@ -7,13 +7,9 @@
     "tailwindcss": "^3.1.7"
   },
   "scripts": {
-    "build-css": "npx tailwindcss -i ./src/styles.css -o ./public/css/tailwind.css",
-    "start": "node server.js"
+    "build-css": "npx tailwindcss -i ./src/styles.css -o ./public/css/tailwind.css"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1"
-  }
+  "license": "ISC"
 }
